# uv-deps-switcher

./: .cursorindexingignore  .gitignore  .uv-deps-switcher.toml.example  README.md  pyproject.toml
.cursor/plans/: add_backup_before_update_c80391cc.plan.md  clone_missing_dependencies_11efcb82.plan.md  deploy-templates_default_yes_f389c593.plan.md  deploy-templates_error_hint_fc9be06a.plan.md  deploy_templates_feature_42016a2a.plan.md  deploy_templates_tests_6dd4798a.plan.md  dev_vs_external_prefix_5fa0740c.plan.md  local_project_switching_728e2398.plan.md  merge_uv_sources_9556e6b3.plan.md  remove_generate-templates_aliases_cf809130.plan.md  rename_cli_tool_63e1aea8.plan.md  uv_dependency_switching_script_8abba6c8.plan.md
src/resources/templated_project_root_template/: uv-deps-switcher.toml
src/uv_deps_switcher/: __init__.py  config.py  main.py
src/uv_deps_switcher/templates/: __init__.py  pyproject_template_dev.toml_fragment.j2  pyproject_template_external.toml_fragment.j2  pyproject_template_release.toml_fragment.j2  pyproject_template_workspace.toml_fragment.j2
templates/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment  uv-deps-switcher.toml
tests/: test_deploy_templates.py  test_path_prefix.py
