[project]
name = "uv-deps-switcher"
version = "0.1.1"
description = "Switch UV dependency sources between dev (local editable) and release (git) configurations across multiple projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
switch-uv-deps = "uv_deps_switcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_deps_switcher"]
